Added Turn order indicator and balanced some characters